Section center alignment fix

--- a/public_html/wp-content/themes/daily-dish-pro/style-front-page.css
+++ b/public_html/wp-content/themes/daily-dish-pro/style-front-page.css
@@ -62,7 +62,7 @@ Hero
 Introduction 
 */
 .introduction {
-  margin: 10rem 0;
+  margin: 10rem auto;
 }
 
 .introduction__heading {
